--- a/_posts/2011-09-04-some-thoughts.textile
+++ b/_posts/2011-09-04-some-thoughts.textile
@@ -14,11 +14,11 @@ When and how is China's economy going to stop growing?
 
 Perhaps in 10 years time the US may not look back at these times as the new Great Depression, but China might well do. Their economy is still growing like topsy, powered by export surpluses (unsustainable), debt growth (unsustainable) and demographics (already unsustained, see "Barry Eichengreen":http://www.kc.frb.org/publicat/sympos/2011/2011.Eichengreen.Remarks.pdf).
 
-And here is another thought: "The current UK depression will be the longest since at least the first world war.":http://www.ft.com/cms/s/0/c6c14d92-d332-11e0-9ba8-00144feab49a.html#axzz1WytZM4pv. So,  the Great Depression was more of a US phenomenon than a UK one.
+And here is another thought: "The current UK depression will be the longest since at least the first world war":http://www.ft.com/cms/s/0/c6c14d92-d332-11e0-9ba8-00144feab49a.html#axzz1WytZM4pv. So,  the Great Depression was more of a US phenomenon than a UK one.
 
 Following Michael Pettis' "predictions for the rest of the decade":http://mpettis.com/2011/08/some-predictions-for-the-rest-of-the-decade/, first Europe and then China are in for difficult times.
 
-When in s the gold bubble going to pop?
+When is the gold bubble going to pop?
 
 It was difficult to disagree with Alex Preston's analysis in "The new gold rush":http://www.newstatesman.com/economy/2011/08/gold-bubble-price-financial. 
 
@@ -32,5 +32,5 @@ If you look at the S&amp;P 500 (or the FTSE 100) over the last 12 years, you jus
 
 There is really no sign yet that this process has reached an end.
 
-As Alan Beattie just pointed out in the FT, "Growth is wobbling, and authorities in the rich world are divided and ineffectual. September is set to be one of the nerviest months of an increasingly perturbing year.":http://www.ft.com/cms/s/0/2fce855c-d487-11e0-a42b-00144feab49a.html#axzz1WytZM4pv
+As Alan Beattie just pointed out in the FT, "Growth is wobbling, and authorities in the rich world are divided and ineffectual. September is set to be one of the nerviest months of an increasingly perturbing year":http://www.ft.com/cms/s/0/2fce855c-d487-11e0-a42b-00144feab49a.html#axzz1WytZM4pv.
 
