--- a/_posts/2011-09-04-some-thoughts.textile
+++ b/_posts/2011-09-04-some-thoughts.textile
@@ -8,7 +8,7 @@ A few questions.
 
 When and how is the Euro is going to come to an end? 
 
-Here is a guess: 2012; quickly and uncontrollably after a peripheral country gives up on servicing their debt and defaults.
+Here is a guess: 2012; quickly and uncontrollably after a peripheral country gives up on servicing its debt and defaults.
 
 When and how is China's economy going to stop growing? 
 
