--- a/_posts/2011-09-04-some-thoughts.textile
+++ b/_posts/2011-09-04-some-thoughts.textile
@@ -24,7 +24,7 @@ It was difficult to disagree with Alex Preston's analysis in "The new gold rush"
 
 Perhaps the collapse of the Euro will see the final run up in the price of gold. Or perhaps we will have to see a few years of financial repression and inflation before interest rates are allowed to rise, currencies stabilise and gold is seen for the ultimate bubble that it is.
 
-So, despite the vertigo-inducing run up in gold over the last decade, it is not at all clear that this we are near the end&mdash;yet. 
+So, despite the vertigo-inducing run up in gold over the last decade, it is not at all clear that we are near the end&mdash;yet. 
 
 And finally, what is going on with stock markets?
 
