--- a/_posts/2011-11-13-london-property-prices.textile
+++ b/_posts/2011-11-13-london-property-prices.textile
@@ -19,7 +19,7 @@ However, neat though this argument is, it doesn't explain the recent decoupling 
 
 (nor does it explain how trade imbalances, the growth of currency reserves and central bank intervention have been fueling the current cycle, but that's another story)
 
-As I recall, in 1989 property prices fell in London before they started falling in the rest of Britain. At the time, I lived in Manchester and I remember people buying houses there after prices had already turned down in London.
+As I recall, in 1989 property prices fell in London before they started falling in the rest of Britain. At the time, I lived in Manchester and I remember people buying houses there at the top of the market after prices had already turned down in London.
 
 This time, it's different. House prices started falling in most of the UK in 2007, but have continued upwards in London, at least in nominal terms. 
 
