--- a/_posts/2011-11-13-london-property-prices.textile
+++ b/_posts/2011-11-13-london-property-prices.textile
@@ -25,7 +25,7 @@ This time, it's different. House prices started falling in most of the UK in 200
 
 But with retail price inflation at around 5%, prices in London are now actually falling in real terms, although not as fast as elsewhere.
 
-Part of the reason might be that London, unlike the rest of the UK is, at least in part, an international property market, which attract overseas buyers, that have continued to buy property as other investment opportunities have lost their attraction.
+Part of the reason might be that London, unlike the rest of the UK is, at least in part, an international property market, which attracts overseas buyers, that have continued to buy property as other investment opportunities have lost their attraction.
 
 But the main difference appears to be the continuing wealth-accumulating capacity of financial services, and in particular wholesale (i.e. investment) banking.
 
