--- a/_posts/2011-11-20-blame-europe.textile
+++ b/_posts/2011-11-20-blame-europe.textile
@@ -14,7 +14,7 @@ The catalysts for this explosion in cross-border lending were (probably) the int
 
 In other words, the current financial crisis that began with US sub-prime mortgages in 2007 was caused above all by under-regulated and out-of-control European banks, operating outside the jurisdiction of US banking regulators.
 
-Chinese and Japanese surpluses, that were largely reinvested in US government securities, are largely not implicated.
+Chinese and Japanese surpluses, that were largely invested in US government securities, are not really implicated.
 
 The upshot is that it is the Europeans that have been the primary source of our problems, with their combination of insanely lax banking standards and a misconceived currency union that has together caused a series of credit crises first in the US and then in Europe.
 
