--- a/_posts/2011-11-20-blame-europe.textile
+++ b/_posts/2011-11-20-blame-europe.textile
@@ -16,7 +16,7 @@ In other words, the current financial crisis that began with US sub-prime mortga
 
 Chinese and Japanese surpluses, that were largely invested in US government securities, are not really implicated.
 
-The upshot is that it is the Europeans that have been the primary source of our problems, with their combination of insanely lax banking standards and a misconceived currency union that has together caused a series of credit crises first in the US and then in Europe.
+The upshot is that it is the Europeans that have been the primary source of our problems, with their combination of insanely lax banking standards and a misconceived currency union that has caused a series of credit crises first in the US and then in Europe.
 
 Not only have northern European banks lent euros to Southern Europe that will not be repaid, but they have funded sub-prime investments in US dollars with short-term paper that is now not being rolled over.
 
