--- a/_posts/2011-02-19-tustain-on-debt.textile
+++ b/_posts/2011-02-19-tustain-on-debt.textile
@@ -4,59 +4,18 @@ title: Tustain on Debt
 category: money 
 standfirst: Paul Tustain, founder of BullionVault.com, unsurprisingly thinks that gold prices are going up.
 ---
-<p>Paul Tustain, founder of BullionVault.com, unsurprisingly thinks that
-<a href="http://www.bullionvault.com/GoldWhereToNow/">gold prices are going
-up</a>. Even if it&rsquo;s only an
-extended sales pitch, his video still makes some interesting points.</p>
+<p>Paul Tustain, founder of BullionVault.com, unsurprisingly thinks that <a href="http://www.bullionvault.com/GoldWhereToNow/">gold prices are going up</a>. Even if it&rsquo;s only an extended sales pitch, his video still makes some interesting points.</p>
 
-<p>First, returns from gold mining are declining, squeezed by the expense
-of extraction and the increasing effectiveness of governments in
-extracting ecomomic rent from the miners, so that they are no longer a
-good leveraged bet on the increase in the value of gold.</p>
+<p>First, returns from gold mining are declining, squeezed by the expense of extraction and the increasing effectiveness of governments in extracting ecomomic rent from the miners, so that they are no longer a good leveraged bet on the increase in the value of gold.</p>
 
-<p>Second, taking data from the BIS, the UK is likely to have debt levels
-of over 150% of GDP by 2020, that is well past the key 90% level
-defined by Reinhart and Rogoff as the point beyond which debt crises
-become likely.</p>
+<p>Second, taking data from the BIS, the UK is likely to have debt levels of over 150% of GDP by 2020, that is well past the key 90% level defined by Reinhart and Rogoff as the point beyond which debt crises become likely.</p>
 
-<p>Third, 2008 and 2009 saw bumper harvests that were statistical
-outliers in a trend that is largely flat, while population and
-consumption per head continue to rise inexorably. Any downturn in food
-production is likely to lead to more price spikes.</p>
+<p>Third, 2008 and 2009 saw bumper harvests that were statistical outliers in a trend that is largely flat, while population and consumption per head continue to rise inexorably. Any downturn in food production is likely to lead to more price spikes.</p>
 
-<p>Fourth, the apparently healthy maturity profile of UK government debt
-is a result almost entirely of quantitive easing being focussed on the
-long end of the maturity spectrum (i.e. what Buiter calls qualitative
-easing). Almost none of the longer-term government debt is being
-bought in the open market. If you strip Bank of England purchases out,
-the profile of government debt is pretty unhealthy. Also most of the
-private buyers of long-term debt are banks that can borrow short-term
-from the Bank of England to finance these purchases. The banks are
-making huge profits from this. And as long as the Bank of England
-continues to buy long-dated government securities, the banks can
-continue to sell back long-dated securities profitably. The Government
-has made a profit on its purchase of banks' equities, which may be
-good political PR, but the upshot is yet more debt on the Government&rsquo;s
-books and of increasingly short maturities.</p>
+<p>Fourth, the apparently healthy maturity profile of UK government debt is a result almost entirely of quantitive easing being focussed on the long end of the maturity spectrum (i.e. what Buiter calls qualitative easing). Almost none of the longer-term government debt is being bought in the open market. If you strip Bank of England purchases out, the profile of government debt is pretty unhealthy. Also most of the private buyers of long-term debt are banks that can borrow short-term from the Bank of England to finance these purchases. The banks are making huge profits from this. And as long as the Bank of England continues to buy long-dated government securities, the banks can continue to sell back long-dated securities profitably. The Government has made a profit on its purchase of banks' equities, which may be good political PR, but the upshot is yet more debt on the Government&rsquo;s books and of increasingly short maturities.</p>
 
-<p>Finally, in Weimar Germany, inflation did start with the printing of
-money by the government as it attempted to pay for reparations and
-their own striking workers in the occupied Ruhr, but what caused it to
-turn into hyperinflation was the resultant loss of confidence in the
-Mark, which in turn caused private investors to demand more and more
-for long term loans, so as people stopped trusting marks, any Marks in
-long-term stores were converted into debt with shorter maturities and
-eventually to cash and then anything that might hold its value. That&rsquo;s
-when the gold price began to rise in terms of Reich Marks. So, long
-term money was piling up as short term debt and then into cash and
-assets.  In 1923, hyperinflation was preceded by an investment boom as
-investors liquidated debt in favour of investment in industrial
-capacity. Hyperinflation only really took off after that investment
-led to industrial over-capacity.</p>
+<p>Finally, in Weimar Germany, inflation did start with the printing of money by the government as it attempted to pay for reparations and their own striking workers in the occupied Ruhr, but what caused it to turn into hyperinflation was the resultant loss of confidence in the Mark, which in turn caused private investors to demand more and more for long term loans, so as people stopped trusting marks, any Marks in long-term stores were converted into debt with shorter maturities and eventually to cash and then anything that might hold its value. That&rsquo;s when the gold price began to rise in terms of Reich Marks. So, long term money was piling up as short term debt and then into cash and assets.  In 1923, hyperinflation was preceded by an investment boom as investors liquidated debt in favour of investment in industrial capacity. Hyperinflation only really took off after that investment led to industrial over-capacity.</p>
 
-<p>In 2011, hedge funds are investing in commodities and pension funds
-are investing in property. It looks not unlike Germany in 1923. The
-upshot could well be severe inflation caused by the melting back of
-bonds into cash and real assets.</p>
+<p>In 2011, hedge funds are investing in commodities and pension funds are investing in property. It looks not unlike Germany in 1923. The upshot could well be severe inflation caused by the melting back of bonds into cash and real assets.</p>
 
 <p>There are only two choices for government: Slash public spending or default.</p>
