--- a/_posts/2011-01-21-global-imbalances-the-perspective-of-the-bank.textile
+++ b/_posts/2011-01-21-global-imbalances-the-perspective-of-the-bank.textile
@@ -4,7 +4,7 @@ title: "Global imbalances: the perspective of the Bank of England"
 category: money
 standfirst: bq. "Global imbalances contributed to the financial crisis and a rebalancing of global demand is the key to  a sustainable recovery."
 ---
-bq. "Global imbalances contributed to the financial crisis and a rebalancing of global demand is the key to  a sustainable recovery. While ﬁnancial regulation will help to intermediate the ﬂows associated with global imbalances, it has limitations. If we, collectively, do not deal with these problems at best we will have a weak world recovery and at worst we will sow the seeds of the next ﬁnancial crisis. It is in our hands to avoid both those outcomes."
+bq. "Global imbalances contributed to the financial crisis and a rebalancing of global demand is the key to  a sustainable recovery. While financial regulation will help to intermediate the flows associated with global imbalances, it has limitations. If we, collectively, do not deal with these problems at best we will have a weak world recovery and at worst we will sow the seeds of the next financial crisis. It is in our hands to avoid both those outcomes."
 
 <p>Mervyn King, Feb 2011.</p>
 
