--- a/_posts/2012-06-11-krugman-on-banking.textile
+++ b/_posts/2012-06-11-krugman-on-banking.textile
@@ -7,27 +7,27 @@ standfirst: "I just don't agree with him"
 
 <iframe width="598" height="336" src="http://www.youtube.com/embed/OKNcP68_WAo#t=79m62s" frameborder="0" allowfullscreen></iframe>
 
-Paul Krugman reckons that banning fractional reserve banning is a plausible idea that is *"quite wrong"*. He thinks that the Diamond-Dybvig paper on "Bank Runs, Deposit Insurance, and Liquidity":http://www.minneapolisfed.org/research/QR/QR2412.pdf  is a refutation of the idea of full reserve banking and "*one of those papers that just opens your mind to a wider reality*":http://krugman.blogs.nytimes.com/2011/10/10/if-banks-are-outlawed-only-outlaws-will-have-banks/.
+Paul Krugman reckons that banning fractional reserve banning is a plausible idea that is _"quite wrong"_. He thinks that the Diamond-Dybvig paper on "Bank Runs, Deposit Insurance, and Liquidity":http://www.minneapolisfed.org/research/QR/QR2412.pdf  is a refutation of the idea of full reserve banking and "_one of those papers that just opens your mind to a wider reality_":http://krugman.blogs.nytimes.com/2011/10/10/if-banks-are-outlawed-only-outlaws-will-have-banks/.
 
 Except that Diamond-Dybvig says absolutely nothing about the relative benefits of fractional reserve, as opposed to "full-reserve":http://en.wikipedia.org/wiki/Full-reserve_banking or "narrow":http://en.wikipedia.org/wiki/Narrow_banking, banking.
 
 All Diamond-Dybvig does is to develop a model that describes how banks can, by pooling the savings of depositors, "fulfill their role of turning illiquid claims into liquid claims" and  "provide allocations superior to those of exchange markets".
 
-As Ralph Musgrave has already pointed out, "*Krugman confuses fractional reserve and maturity transformation*":http://ralphanomics.blogspot.co.uk/2011/11/krugman-confuses-fractional-reserve-and.html.
+As Ralph Musgrave has already pointed out, "_Krugman confuses fractional reserve and maturity transformation_":http://ralphanomics.blogspot.co.uk/2011/11/krugman-confuses-fractional-reserve-and.html.
 
-Professor Krugman goes on to say that *"if you criminalize fractional reserve banking only criminals will have fractional reserve banking"*. But if a government refuses a bank both deposit insurance and access to the central bank discount, that is not so much criminalizing the bank as making it highly undesirable to depositors.
+Professor Krugman goes on to say that _"if you criminalize fractional reserve banking only criminals will have fractional reserve banking"_. But if a government refuses a bank both deposit insurance and access to the central bank discount, that is not so much criminalizing the bank as making it highly undesirable to depositors.
 
 Such a bank might flourish if the official banking sector really failed to meet the needs of its customers, but it is not clear that they would give up the relative security of insured deposits for an additional one or two precent per annum.
 
-He also says that *"it is much harder because of shadow banking. You have to find a way to define what is banking"*. 
+He also says that _"it is much harder because of shadow banking. You have to find a way to define what is banking"_. 
 
 Except maybe you don't.
 
 There is a very compelling argument in "a paper by Mark Roe":http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1567075 (a professor of law, not economics), that the priority that derivative contract counter-parties enjoy over other creditors in the event of bankruptcy is an implicit subsidy to the derivatives markets. The simple act of reducing that priority would remove much of the benefits of these markets and therefore greatly reduce their size and the risk they represent to the wider economy.
 
-Michael Simkovic "makes a similar argument":http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1323190 that *"complex and opaque financial products receive the highest priority in bankruptcy"* and as a result *"creditors’ incentives are therefore to structure transactions using these favored financial products"*.
+Michael Simkovic "makes a similar argument":http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1323190 that _"complex and opaque financial products receive the highest priority in bankruptcy"_ and _"creditors' incentives are therefore to structure transactions using these favored financial products"_.
 
-He argues that we *"can prevent future financial crises"* by requiring *"that creditors should be compelled to disclose their claims in exchange for payment priority"*.
+He argues that we _"can prevent future financial crises"_ by requiring _"that creditors should be compelled to disclose their claims in exchange for payment priority"_.
 
 In other words, the whole panopoly of half-baked banking regulation (Dodd-Frank et al) is unnecessary. A simple reform of bankruptcy law would solve the problem of unregulated banking.
 
