tweak to green energy

--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -50,6 +50,10 @@ Even if none of us become customers of companies like "Good Energy":http://www.g
 
 It is entirely understandable that the founders of these trail-blazing energy companies would see the commercial benefit of marketing themselves as electricity suppliers, but their power generation businesses are unlikely to depend on it. If LoCO2 were to cease trading, their sister company, TLS Hydro, would probably continue to operate their "wonderful array of refurbished water turbines":http://www.tradelinksolutions.com/assets.php. 
 
-But we are all already providing a large subsidy to renewable production through the cost of ROCs, which are ultimately paid by all energy consumers, so in some sense we are all already green energy consumers.
+But we are all already providing a large subsidy to renewable production through the cost of ROCs, which are ultimately paid by all energy consumers, and the additional contribution we can make through choosing a green tariff is modest by comparison.
 
-Whether or not we sign up for a green energy tariff is less about making a practical difference than it is about making a personal connection with a company whose objectives we sympathise with. And adding to the profitability of a company like LoCO2 may, after all, lead to TLS Hydro building more turbines.
+So, whether or not we sign up for a green energy tariff is less about making a practical difference than it is about making a personal connection with a company whose objectives we sympathise with. 
+
+And adding to the profitability of a company like LoCO2 may, after all, lead to TLS Hydro building more turbines, which is unlikely to be a bad thing.
+
+
