--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -10,6 +10,8 @@ Except it's not quite that simple.
 
 In recent years, the growth in renewable energy supply in the UK has been driven by the "Renewables Obligation":http://en.wikipedia.org/wiki/Renewables_Obligation, a government scheme introduced in 2002, which obliges all licensed electricity suppliers to source an annually-increasing proportion of their energy from renewable sources. The proportion began at 3% and in 2012 is 12.4%.
 
+<fieldset>
+<legend>Warning</legend>
 The Government, through Ofgem, issues accredited renewable generators with one "Renewables Obligation Certificate":http://en.wikipedia.org/wiki/Renewables_Obligation#Renewables_Obligation_Certificates (ROC) for each MWh of renewable output (although since 2009 banding has been introduced, meaning that some sources of supply, such as offshore wind, are issued with more than one ROC per MWh and some less).
 
 All electricity suppliers must present ROCs to Ofgem to the value of (in 2012) 12.4% of the electricity that they supply to their customers. They can do this either by getting ROCs directly from the Government through generating their own eligible electricity, by buying ROCs in the secondary market, or by making a payment directly to Ofgem at a fixed "buy-out" price set by Ofgem each year. As long as renewable energy output falls short of the renewable obligation, some energy suppliers will need to make buy-out payments to Ofgem.
@@ -19,6 +21,7 @@ Any profits made by Ofgem from buy-out payments are redistributed to energy supp
 In 2010-11, around 71% of the Renewables Obligation was covered by actual supply, with the balance being made up with buy-out payments of &pound;36.99 per MWh. The redistribution per ROC was &pound;14.35. Adding these two figures together, the market value of each ROC was &pound;51.34 (see "Renewables Obligation Annual Report 2010-11":http://www.ofgem.gov.uk/Pages/MoreInformation.aspx?docid=278&refer=Sustainability/Environment/RenewablObl)
 
 By comparison, the wholesale price of electricity in the UK is around &pound;50/MWh.
+</fieldset>
 
 What the Renewables Obligation means in practice is that renewable energy generators are currently receiving about twice what conventional generators receive per unit of output, subsidised by all of us through our electricity suppliers.
 
